# minijinja-playground

./: .gitignore  Cargo.toml  README.md  app_jsx.bootstrap.js  bootstrap.js  index.html  package-lock.json  vendors-node_modules_ace-builds_src-noconflict_ext-language_tools_js-node_modules_ace-builds_-e90a83.bootstrap.js
.github/workflows/: pages-nightly.yml
src/: lib.rs
www/: app.jsx  bootstrap.js  index.html  package-lock.json  package.json  webpack.config.js
